@@ -246,6 +246,7 @@ mips*-*-linux-gnu*)	targ_emul=elf32bsmip
 			targ_extra_emuls="elf32lsmip mipsbig mipslit"
 			;;
 mips*-*-lnews*)		targ_emul=mipslnews ;;
+mips*-*-sysv4*)         targ_emul=elf32btsmip ;;
 mn10200-*-*)		targ_emul=mn10200 ;;
 mn10300-*-*)		targ_emul=mn10300 ;;
 alpha*-*-linuxecoff*)	targ_emul=alpha targ_extra_emuls=elf64alpha
